don't allow patch notes in search.

--- a/docs/patch_notes/dates/20240513.md
+++ b/docs/patch_notes/dates/20240513.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🏰 Manor
 
 - When doing Louigie's Banshee Quest, you are now given eight seconds between map warps to allow you to pick up any items the randomly spawned boss may have dropped.
