--- a/docs/patch_notes/dates/20240516.md
+++ b/docs/patch_notes/dates/20240516.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🧙‍♂️ Wizards
 
 - Wizards can now learn spells even if they have already learned their upgraded prerequisites.
