--- a/docs/patch_notes/dates/20240519.md
+++ b/docs/patch_notes/dates/20240519.md
@@ -1,4 +1,10 @@
+---
+search:
+  exclude: true
+---
+
 🎬 New Animations
+
 Animations have been updated for the following skills and spells, enhancing visual effects and player experience:
 
 Cradh Spells:
