--- a/docs/patch_notes/dates/20240521.md
+++ b/docs/patch_notes/dates/20240521.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🧘 [Monks]
 
 - Monks have embraced their true potential, shedding the need for shields. This change allows Monks to retain mana necessary for spells while maintaining the armor class benefits—enhancing both functionality and aesthetics.
