--- a/docs/patch_notes/dates/20240523.md
+++ b/docs/patch_notes/dates/20240523.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 📜 Spells
 
 - Dodge: Resolved an issue where it incorrectly removed Magic Resistance twice. Now correctly modifies Magic Resistance once and restores it properly. Dodge now reduces Magic Resistance by only 15% instead of 20%.
