--- a/docs/patch_notes/dates/20240603.md
+++ b/docs/patch_notes/dates/20240603.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🙏 Religion
 
 - 📿 Fixed an issue where mass hosted by aislings wasn't dishing out experience properly.
