--- a/docs/patch_notes/dates/20240607.md
+++ b/docs/patch_notes/dates/20240607.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🙏Religion
 
 - 📿 Fixed an issue where Emissary could host mass when Seer and above should only be able to.
