--- a/docs/patch_notes/dates/20240625.md
+++ b/docs/patch_notes/dates/20240625.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🛡️ [Items]
 
 - 🔧 An item at zero durability (Account Bound) will inform you that it cannot be worn anymore and needs to be repaired.
