--- a/docs/patch_notes/dates/20240908.md
+++ b/docs/patch_notes/dates/20240908.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 [Critical]
 
 - 🛡️ Fixed an issue with subbing where armor class, weight, and attack speed were not correctly reset. These should now be adjusted automatically using the detection system.
