--- a/docs/patch_notes/dates/20240929.md
+++ b/docs/patch_notes/dates/20240929.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 [Skills/Spells]
 
 - 🛑 Aura of Blessing: Still broken – does not apply Aite buff properly. Fix coming in the next update.
