--- a/docs/patch_notes/dates/20241018.md
+++ b/docs/patch_notes/dates/20241018.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🎃 [Halloween Event] 🎃
 
 The Count and Countess of Macabre have returned! These ancient beings, cursed with immortality through dark rituals, now haunt their former estate, seeking to devour the souls of those who dare challenge them. Brave Aislings can face the Count and Countess for a chance at unique prizes and valuable experience. Only the strongest will survive their sinister powers!
