--- a/docs/patch_notes/dates/20250111.md
+++ b/docs/patch_notes/dates/20250111.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🛠️ [Fixes]
 
 - Overcoats and helmets that overlapped other items should now show as intended. If they do not, please message one of the GMs.
