--- a/docs/patch_notes/dates/20250219.md
+++ b/docs/patch_notes/dates/20250219.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 ⚙️ [Options]
 
 - 🔕 Whisper Notification Toggle: Players can now disable whisper notifications if they prefer.
