--- a/docs/patch_notes/dates/20250221.md
+++ b/docs/patch_notes/dates/20250221.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🗺️ [Quests]
 
 - 🐙 Queen Octopus Quest Fix: Maria now directs you to the correct map to find her brother’s secret cave.
