--- a/docs/patch_notes/dates/20250224.md
+++ b/docs/patch_notes/dates/20250224.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🪄 [Enchanting]
 
 - Enchanting Scrolls & Trading: You can now create enchanting scrolls and trade them so other players can enchant their items.
