--- a/docs/patch_notes/dates/20250310.md
+++ b/docs/patch_notes/dates/20250310.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🆙 [Ascending]
 
 - 📌 Added a message displaying 🔹 total EXP used, 🔹 base Stat, and 🔹 previous Stat when speaking with 🌓 Theselene or ⚔️ Skandara.
