--- a/docs/patch_notes/dates/20250218.md
+++ b/docs/patch_notes/dates/20250218.md
@@ -1,3 +1,8 @@
+---
+search:
+  exclude: true
+---
+
 🏰 [Guilds]
 
 - 🏡 Guild Halls Introduced: Now available for purchase and upgradable by any guild member!
